
Improved peak extraction method, which was undervaluing transmission
in many cases.

New version of evalglare from Jan Wienold.

Added -u option to gendaymtx to elide data columns (time steps) when
the sun is not visible above the horizon.

=========================
Version 5.4

Added rcollate -c option to force operation to continue even if it
seems unnecessary.  Made tool more robust.

Added -t option to rcontrib (and rfluxmtx) to report progress after the
given number of seconds.

Added "test" target to makeall to run unit tests.

Modified bsdf2ttree to allow different parameters per input SIR file.

Fixed issues with very large matrix files (> 2GB) in dctimestep, rmtxop,
and rcollate.

Added -rf and -rb options to rmtxop to load front or back reflectance
matrix data from XML file rather than transmission.  (Lars Grobe suggested.)

Improved behavior for coincident surfaces with different materials.
Rather than returning one surface or the other based on floating-point
vagaries, opaque materials are now preferred over transparent ones.
If the materials are both transparent or both opaque, then whichever
surface appeared later in the scene description will be selected.
This came of a request for consistent behavior with legal CAD output
from Peter Apian-Bennewitz.

Added explicit tests for on-edge intersections with polygons.  This should
eliminate stray rays and tiny light leaks that often appear even in
well-constructed geometry.

Added "-s up" option to pabopto2bsdf to allow for 180 degree symmetry,
meaning that data repeats after 180 degree rotation (as distinguished
from "-s bilateral" whose data is mirrored about a vertical plane).
Thanks to Helen Rose Wilson for the suggestion and informing me that
such a thing exists.

Removed upper limit on number of modifiers in rcontrib.

Put cap on maximum ambient gradient to avoid over-extrapolation of
poorly computed irradiance cache values.

Added robjutil +T option to triangulate all faces in .OBJ description.