@@ -2425,3 +2425,7 @@ Put cap on maximum ambient gradient to avoid over-extrapolation of
 poorly computed irradiance cache values.
 
 Added robjutil +T option to triangulate all faces in .OBJ description.
+
+Altered BSDF library to have both front and back diffuse transmittance
+values, which can be different.  This was necessary to avoid issues
+caused by measurement and modeling discrepancies.
